# IMServer

IMServerFlamingo/: CMakeCache.txt  CMakeLists.txt  Makefile  chatserver.conf  cmake_install.cmake  fileserver.conf  flamingoPro.opensdf  flamingoPro.sln  flamingoPro.vcxproj  flamingoPro.vcxproj.filters  imgserver.conf  myserver.vcxproj  start  start.cpp
IMServerFlamingo/base/: asynclogging.h  configfilereader.cpp  configfilereader.h  countdownlatch.h  fileutil.h  logfile.h  logging.h  logstream.h  singleton.h  timestamp.h
IMServerFlamingo/chatserversrc/: 3  ClientSession.cpp  ClientSession.h  IMServer.cpp  IMServer.h  Msg.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
IMServerFlamingo/database/: .databasemysql.cpp.swp  databasemysql.h  field.h  queryresult.h
IMServerFlamingo/fileserversrc/: FileManager.cpp  FileManager.h  FileMsg.h  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  MD5.h  TcpSession.cpp  TcpSession.h  main.cpp
IMServerFlamingo/imgserversrc/: main.cpp
IMServerFlamingo/model/: IMGroup-odb.cpp  IMGroup-odb.d  IMGroup-odb.hxx  IMGroup-odb.ixx  IMGroup.cpp  IMGroup.d  IMGroup.hxx  IMGroupMember-odb.cpp  IMGroupMember-odb.d  IMGroupMember-odb.hxx  IMGroupMember-odb.ixx  IMGroupMember.cpp  IMGroupMember.d  IMGroupMember.hxx  IMMessage-odb.cpp  IMMessage-odb.d  IMMessage-odb.hxx  IMMessage-odb.ixx  IMMessage.cpp  IMMessage.d  IMMessage.hxx  Model.cpp  Model.d  Model.h  Relationship-odb.cpp  Relationship-odb.d  Relationship-odb.hxx  Relationship-odb.ixx  Relationship.cpp  Relationship.d  Relationship.hxx  User-odb.cpp  User-odb.d  User-odb.hxx  User-odb.ixx  User.cpp  User.d  User.hxx  database.h  makefile  (+5 more)
IMServerFlamingo/mysql/: mysqlmanager.cpp  mysqlmanager.h  mysqltask.h  mysqlthrd.h  mysqlthrdmgr.h  tasklist.h
IMServerFlamingo/sql/: SqlDatabase.h  SqlQuery.h  SqlQueryModel .h
IMServerTT/auto_setup/: setup.progress
IMServerTT/auto_setup/im_server/im-server-1/: restart.sh  start.sh
IMServerTT/auto_setup/im_server/im-server-1/db_proxy_server/: dbproxyserver.conf
IMServerTT/auto_setup/im_server/im-server-1/file_server/: fileserver.conf
IMServerTT/auto_setup/im_server/im-server-1/http_msg_server/: httpmsgserver.conf
IMServerTT/auto_setup/im_server/im-server-1/login_server/: login_server  loginserver.conf
IMServerTT/auto_setup/im_web/conf/: database.php
IMServerTT/auto_setup/redis/: dump.rdb
IMServerTT/auto_setup/redis/conf/: dump.rdb
IMServerTT/server/im-server-1/db_proxy_server/: dbproxyserver.conf
(+4 files in other folders)
